# sahaj-pathfinder

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  tsconfig.json
architecture/: architecture.md  architecture_explanation.md
backend/: README.md  main.py  pyproject.toml
backend/agents/: __init__.py
backend/api/routes/: impact.py  offers.py  opportunities.py  system.py
backend/core/: config.py
backend/graph/: __init__.py
backend/sahaj_pathfinder_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/schemas/: data_models.py
backend/services/: data_loader.py
docs/: Implementation_Roadmap.md  Problem_Statement.md  Product_Definition_Document.md  Technology_Stack.md
frontend/: package-lock.json  package.json  tailwind.config.ts  task.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: layout-wrapper.tsx  sidebar.tsx  top-nav.tsx
frontend/features/: .gitkeep
frontend/lib/: .gitkeep  cameraDirector.ts  cursorController.ts  demoConfig.ts  executiveConfig.ts
frontend/providers/: demo-provider.tsx  query-provider.tsx
frontend/styles/: .gitkeep
presentation/: Demo_Storyboard.md
prototype/: prototype_overview.md
sample_data/: 01_msme_profiles.csv  02_invoice_transactions.csv  03_anchor_relationships.csv  04_advisor_relationships.csv  05_graph_edges.csv  06_acquisition_opportunities.csv  07_opportunity_signals.csv  08_route_evaluation_results.csv  09_outreach_history.csv  10_customer_conversion_events.csv  11_ecosystem_expansion_tracking.csv  12_agent_learning_feedback.csv  README.md
(+40 files in other folders)
